; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cmsgpack.c_mp_encode_lua_table_as_array.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cmsgpack.c_mp_encode_lua_table_as_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"in function mp_encode_lua_table_as_array\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_encode_lua_table_as_array(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @lua_objlen(i32* %9, i32 -1)
  store i64 %10, i64* %7, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @mp_encode_array(i32* %11, i32* %12, i64 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @luaL_checkstack(i32* %15, i32 1, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  store i64 1, i64* %8, align 8
  br label %17

17:                                               ; preds = %32, %3
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %7, align 8
  %20 = icmp ule i64 %18, %19
  br i1 %20, label %21, label %35

21:                                               ; preds = %17
  %22 = load i32*, i32** %4, align 8
  %23 = load i64, i64* %8, align 8
  %24 = call i32 @lua_pushnumber(i32* %22, i64 %23)
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @lua_gettable(i32* %25, i32 -2)
  %27 = load i32*, i32** %4, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 %29, 1
  %31 = call i32 @mp_encode_lua_type(i32* %27, i32* %28, i32 %30)
  br label %32

32:                                               ; preds = %21
  %33 = load i64, i64* %8, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %8, align 8
  br label %17

35:                                               ; preds = %17
  ret void
}

declare dso_local i64 @lua_objlen(i32*, i32) #1

declare dso_local i32 @mp_encode_array(i32*, i32*, i64) #1

declare dso_local i32 @luaL_checkstack(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushnumber(i32*, i64) #1

declare dso_local i32 @lua_gettable(i32*, i32) #1

declare dso_local i32 @mp_encode_lua_type(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
